--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
               <meta charset="utf-8">
 			  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 			  <title>Basic Registration form</title>
-		<link rel="stylesheet" href="../Basic_Reg_Form/css/form_style.css">
+		<link rel="stylesheet" href="Basic_Reg_Form/css/form_style.css">
         </head>
 <body>
 <div class="form-group">
