--- a/form.html
+++ b/form.html
@@ -4,8 +4,85 @@
               <meta charset="utf-8">
 			  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 			  <title>Basic Registration form</title>
-		<link rel="stylesheet" href="Basic_Reg_Form/css/form_style.css">
-        </head>
+<style>
+/* Universal parameter definition */
+* {
+   box-sizing: border-box;
+   }
+   
+   body {
+   background: orange;
+   
+   }
+
+.form-group {
+color: #fff;
+width: 100%;
+max-width: 350px;
+background-color: black;
+border-top: 5px dashed #fff;
+margin: auto;
+border-radius: 5px;
+padding: 10px 20px;
+
+}
+
+.form-group h3 {
+
+text-align: center;
+font-family: sans-serif, cambria;
+font-size 2em;
+}
+
+/* Input and text field definitions*/	
+input[type="text"],
+input[type="password"],
+input[type="date"],
+input[type="datetime"],
+input[type="email"],
+input[type="number"],
+input[type="search"],
+input[type="tel"],
+input[type="time"],
+input[type="url"],
+textarea,
+select {
+  background: rgba(255,255,255,0.1);
+  border: none;
+  font-size: 16px;
+  height: auto;
+  margin: 0;
+  outline: 0;
+  padding: 8px;
+  width: 100%;
+  background-color: #e8eeef;
+  color: #8a97a0;
+  box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+  margin-bottom: 30px;
+  border-radius: 5px;
+	
+}
+
+
+
+button
+{
+  background: orange;
+  font-size: 16px;
+  height: auto;
+  margin: 0;
+  outline: 0;
+  padding: 8px;
+  width: 100%;
+  color: #000;
+  box-shadow: 0 1px 0 rgba(0,0,0,0.03) inset;
+  margin-bottom: 30px;
+  border-radius: 5px;
+  }
+
+</style>
+			  
+			  </head>
 <body>
 <div class="form-group">
 	<form>
